#989 - Import annotated texts from PubAnnotation
- warn when a relation type is missing the Governor/Dependent endpoint features so the user is told why endpoints come back unset
- move the project picker's pagination above the card grid (closer to the search field)
- tidy a few cosmetic loose ends in the provider (Optional import, .toList(), field ordering)